# web3-scaffold-app-monorepo

./: .gitignore  .snyk  INITIAL.md  README.md  package-lock.json  package.json
.codex/: AGENTS.md  HARNESS.md  LESSONS-LEARNED.md  METHODOLOGY.md  PROJECT-RULES-i18n.md  PROJECT-RULES.md  README.md
.codex/core/: adr-rules.md  closeout-loop.md  command-standards.md  context-architecture.md  executable-guardrails.md  failure-modes.md  harness.md  maturity-checklist.md  milestone-design.md  observability.md  openspec-sync.md  persona-review.md  pilot-promotion.md  strict-architecture-boundaries.md  task-packaging.md  task-sizing.md  taste-invariants.md  validation-matrix.md  wbs-planning.md  work-breakdown.md
.codex/reference/: LEGACY-MAPPING.md  readme.md
.codex/templates/: acceptance-criteria-template.md  bmm-spec-checklist.md  closeout.md  milestone-status.md  milestone-template.md  milestone.md  persona-review.md  quick-prompt.md  task-definition-template.md  wal-entry.template.json
.codex/wal/: LIFECYCLE.md  README.md
.codex/workflows/: README.md  aliases.md  archive.md  bmm.md  dev.md  hygiene.md  quick.md  review.md  router.md  spec.md  validate.md
.cursor/commands/: gcb-gcam-gp.md
.cursor/rules/: coding-patterns.mdc  cross-platform.mdc  locale-handling.mdc  package-structure.mdc
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
@types/: cloudfs.d.ts  react-native-ping.d.ts  react-native-restart.d.ts
apps/desktop/: app.json  entitlements.mac.inherit.plist  entitlements.mac.plist  webpack.config.js
apps/ext/: webpack.config.js
apps/mobile/: app.json
apps/react-native-godot-demo/: .gitignore  README.md  app.json  babel.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native-godot.d.ts
apps/start-ui-native/: GODOT_INTEGRATION.md  README.md  app.config.ts  package.json
apps/web-astro/: .gitignore  README.md  astro.config.mjs  package.json  tsconfig.json
apps/web-embed/: .gitignore  sentry.js  webpack.config.js
development/: developmentConsts.js
docs/: applications-architecture.md  bitcoin-ordinals-roadmap.md  brand-replacement-analysis.md  cross-platform-component-reuse.md  database-cross-platform-sync.md  database-technology-choice.md  ios-app-submission-checklist.md  online-features-implementation.md  product-planning.md  repo-intent.md  scenario-feasibility-analysis.md  server-db-cross-platform-sync.md
patches/: @open-wc+webpack-import-meta-loader+0.4.7.patch  @revenuecat+purchases-js+0.15.1.patch  @sentry+browser+8.42.0.patch  @tamagui+toast+1.108.0.patch  @ton+core+0.61.0.patch  @zondax+izari-filecoin+1.2.1.patch  README.md  bignumber.js+9.1.2.patch  electron-taskbar-badge+1.1.2.patch  expo-camera+16.1.10.patch  react-native-crypto+2.2.0.patch  react-native-modal+13.0.1.patch  react-native-performance-stats+0.2.3.patch  text-encoding+0.7.0.patch  ua-parser-js+2.0.4.patch
ref/: 1.md  README.md  SEO_HEAD_COMPLETE_SOLUTION.md  brand-incubation.md  brand-narrative.md  data-use.md  discussion-starter-notes.md  indexnow.md  product-sense.md  valiate-seo.md  vinnext.md  warning.md  巨额账单.md  瀑布-vs-敏捷.md  试点-推广.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/: CLAUDE.md  PROJECT-STATUS.md  pyproject.toml
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/.claude/: ARCHITECTURE.md  INSTALL.md  USAGE.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/.claude/agents/aso/: aso-master.md  aso-optimizer.md  aso-research.md  aso-strategist.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/.claude/commands/aso/: aso-competitor.md  aso-full-audit.md  aso-optimize.md  aso-prelaunch.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/.claude/skills/aso/: AGENT-INTEGRATION.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/.claude/templates/: action-launch-template.md  action-metadata-template.md  action-optimization-template.md  action-research-template.md  action-testing-template.md  master-action-plan-template.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/documentation/implementation/: aso-agents-implementation-plan.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/documentation/workflows/: branch-protection-setup.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/outputs/: README.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/outputs/FitFlow-example/: 00-MASTER-ACTION-PLAN.md  README.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/outputs/FitFlow-example/01-research/: keyword-list.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/outputs/FitFlow-example/02-metadata/: apple-metadata.md
ref/claude-code-aso-skill-main/claude-code-aso-skill-main/scripts/: generate-wiki-content.py
scripts/: rename-readme.js
(+598 files in other folders)
