[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-aso-skill"
version = "1.0.0"
description = "Comprehensive App Store Optimization (ASO) skill for Claude Code with multi-agent system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alireza Rezvani", email = "github@alirezarezvani.com"}
]
maintainers = [
    {name = "Alireza Rezvani", email = "github@alirezarezvani.com"}
]
keywords = [
    "aso",
    "app-store-optimization",
    "keyword-analysis",
    "metadata-optimization",
    "claude-code",
    "claude-skill",
    "mobile-app-marketing",
    "apple-app-store",
    "google-play-store"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"

# No external dependencies - standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/alirezarezvani/claude-code-aso-skill"
Documentation = "https://github.com/alirezarezvani/claude-code-aso-skill/wiki"
Repository = "https://github.com/alirezarezvani/claude-code-aso-skill"
Issues = "https://github.com/alirezarezvani/claude-code-aso-skill/issues"
Changelog = "https://github.com/alirezarezvani/claude-code-aso-skill/blob/main/CHANGELOG.md"

[tool.ruff]
# Target Python 3.8+ for backward compatibility
target-version = "py38"

# Line length matching ASO skill conventions
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".github",
    ".claude",
    "outputs",
    "documentation",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable rules
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "C90",   # mccabe complexity
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by line-length)
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR2004", # Magic value comparison
    "RUF012",  # Mutable class attributes
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Allow print statements in scripts
"scripts/*.py" = ["T201"]
# Allow assert in tests (when added)
"tests/*.py" = ["S101"]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 15

[tool.ruff.lint.isort]
# Import sorting configuration
known-first-party = ["app-store-optimization"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Formatting options
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Docstring formatting
docstring-code-format = true
docstring-code-line-length = 88

[tool.mypy]
# Type checking configuration (optional, for future strict typing)
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for now (no external dependencies)
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Stricter checking for core ASO modules
module = "app-store-optimization.*"
disallow_untyped_defs = false
check_untyped_defs = true
